Refaster compilation uses exports matching error-prone compilation
Note that testing is difficult here as migrating to an
IntegrationSpec surfaces the same issues we see in practice.
This commit prevents new failures from occuring when we use
java-17.